--- a/application/index/view/index.html
+++ b/application/index/view/index.html
@@ -38,7 +38,7 @@
         <ul class="layui-nav layui-layout-right" id="nav_user"  lay-filter="nav_user">
             <li class="layui-nav-item">
                 {if condition = '$username == "请登录"'}
-                <a href="#" id="login">
+                <a id="login">
                     <img src="{$userHead}" class="layui-nav-img">
                     请登录
                 </a>
@@ -143,7 +143,8 @@ document.getElementById('login').onclick = function(){
             shadeClose: true,
             shade: 0.8,
             area: ['380px', '90%'],
-            content: 'index/index/login' //iframe的url
+            content: "{:url('index/index/login')}" //iframe的url
+            // content: 'index/index/login' //iframe的url
         });
       //触发事件
     });
