--- a/application/index/view/user_center.html
+++ b/application/index/view/user_center.html
@@ -14,7 +14,7 @@
             <a href="#" class="nav_logo"></a>
         </div>
         <ul class="layui-nav layui-layout-left"  lay-filter="demo">
-            <li class="layui-nav-item"><a href="#">首页</a></li>
+            <li class="layui-nav-item"><a href="{:url('index/index/index')}">首页</a></li>
             <li class="layui-nav-item "><a href="#">目的地</a></li>
             <li class="layui-nav-item"><a href="{:url('index/goods/travelmall')}">旅行商城<span class="layui-badge-dot"></span></a></li>
             <li class="layui-nav-item">
