--- a/application/index/view/travelconfirm.html
+++ b/application/index/view/travelconfirm.html
@@ -25,7 +25,7 @@
             <a href="#" class="nav_logo"></a>
         </div>
         <ul class="layui-nav layui-layout-left"  lay-filter="demo">
-            <li class="layui-nav-item"><a href="{:url('index/index/index')}">首页</a></li>
+            <li class="layui-nav-item"><a href="{:url('index/index/user_center')}">首页</a></li>
             <li class="layui-nav-item "><a href="#">目的地</a></li>
             <li class="layui-nav-item"><a href="{:url('index/goods/travelmall')}">旅行商城<span class="layui-badge-dot"></span></a></li>
             <li class="layui-nav-item">
@@ -266,37 +266,6 @@
 	
 	
 
-//注册
-document.getElementById('register').onclick = function(){
-    layui.use(['layer','table'], function(){ 
-    var layer = layui.layer;
-        layer.open({
-            type: 2,
-            title: '注册',
-            shadeClose: true,
-            shade: 0.8,
-            area: ['380px', '90%'],
-            content: '../index/register' //iframe的url
-        });
-      //触发事件
-    });
-}
-//登录
-document.getElementById('login').onclick = function(){
-    layui.use(['layer','table'], function(){ 
-    var layer = layui.layer;
-        layer.open({
-            type: 2,
-            title: '登录',
-            shadeClose: true,
-            shade: 0.8,
-            area: ['380px', '90%'],
-            content: "{:url('index/index/login')}" //iframe的url
-            // content: 'index/index/login' //iframe的url
-        });
-      //触发事件
-    });
-}
 
 </script>
 
