--- a/application/backend/view/travels.html
+++ b/application/backend/view/travels.html
@@ -1,154 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8">
-    <title>游记</title>
-    <meta name="renderer" content="webkit">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link rel="stylesheet" href="__STATIC__/layui/css/layui.css">
-</head>
-<body>
-<div class="layui-btn-group demoTable">
-    <button class="layui-btn" data-type="getCheckData">批量删除</button>
-    <button class="layui-btn" data-type="shangxiajia">批量上/下架</button>
-</div>
-<input type="text" placeholder="请输入ID/标题/作者" id="searchtxt" class="layui-input" style="display: inline-block;width: 300px">
-<div class="layui-btn-group demoTable">;
-    <button class="layui-btn " data-type="search">搜索</button>
-</div>
-
-
-<table class="layui-table" lay-data="{ url:'../Travels/showTravel', page:true, id:'idTest'}" lay-filter="demo">
-    <thead>
-    <tr>
-        <th lay-data="{type:'checkbox', fixed: 'left'}"></th>
-        <th lay-data="{field:'travelsid', width:80, sort: true, fixed: true}">ID</th>
-        <th lay-data="{field:'title', width:150, fixed: true}">标题</th>
-        <th lay-data="{field:'time', width:150, sort: true, fixed: true}">发布时间</th>
-        <th lay-data="{field:'uname', width:80,sort: true, fixed: true}">作者</th>
-        <th lay-data="{field:'state', width:150, sort: true,fixed: true}">状态</th>
-        <th lay-data="{fixed: 'right', width:178, align:'center', toolbar: '#barDemo'}">操作</th>
-    </tr>
-    </thead>
-</table>
-
-<script src="__STATIC__/layui/layui.js"></script>
-<script type="text/javascript" src = '__JS__/jquery-3.2.1.min.js'></script>
-<script type="text/html" id="barDemo">
-    <a class="layui-btn layui-btn layui-btn-xs" lay-event="read">查看</a>
-    <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del">删除</a>
-</script>
-<script>
-    layui.use('table', function(){
-        var table = layui.table;
-        //监听表格复选框选择
-        table.on('checkbox(demo)', function(obj){
-            console.log(obj)
-        });
-        //监听工具条
-        table.on('tool(demo)', function(obj){
-            var data = obj.data;
-            var travelsid = data.travelsid;
-            if (obj.event === 'del'){
-                layer.confirm('真的删除这篇游记么',{title:"删除确认"},function(index){
-                    $.ajax({
-                        url:'{:url("backend/Travels/delTravel")}',
-                        data:{travelsid:travelsid},
-                        dataType:"JSON",
-                        type:"post",
-                        success:function (res) {
-                            if (res.code == 201){
-                                obj.del();
-                                layer.alert(res.message);
-                            }else if (res.code == 401){
-                                layer.alert(res.message);
-                            }
-                        }
-                    });
-                });
-            }
-            else if (obj.event === 'read'){
-                console.log(data);
-                layer.open({
-                    type: 1,
-                    content:data.content,
-                    area: ['800px', '500px'],//这里content是一个普通的String
-                    title:data.title
-                });
-            }
-        });
-
-        var $ = layui.$, active = {
-            getCheckData: function(){ //获取选中数据
-                var checkStatus = table.checkStatus('idTest')
-                    ,data = checkStatus.data;
-                //layer.alert(JSON.stringify(data));
-                var delMore = JSON.stringify(data);
-                layer.confirm('真的删除多篇游记么',{title:"删除确认"},function(index){
-                    $.ajax({
-                        url:'{:url("backend/Travels/delTravelMore")}',
-                        data:{delMore:delMore},
-                        dataType:"JSON",
-                        type:"post",
-                        success:function (res) {
-                            if (res.code == 201){
-                                layer.alert(res.message);
-                                table.reload('idTest', {
-                                    url: '../Travels/showTravel'
-                                });
-                            }else if (res.code == 401){
-                                layer.alert(res.message);
-                            }
-                        }
-                    });
-                });
-            },
-            shangxiajia:function () {
-                var checkStatus = table.checkStatus('idTest')
-                    ,data = checkStatus.data;
-                //console.log(JSON.stringify(data));
-                var changeState = JSON.stringify(data);
-                layer.confirm('真的要改变游记状态么',{title:"状态变更确认"},function(index){
-                    $.ajax({
-                        url:'{:url("backend/Travels/changeTravelState")}',
-                        data:{changeState:changeState},
-                        dataType:"JSON",
-                        type:"post",
-                        success:function (res) {
-                            if (res.code == 203){
-                                layer.alert(res.message);
-                                table.reload('idTest', {
-                                    url: '../Travels/showTravel'
-                                });
-                            }else if (res.code == 403){
-                                layer.alert(res.message);
-                            }
-                        }
-                    });
-                });
-            },
-            search:function () {
-                var value = $('#searchtxt').val();
-                table.reload('idTest', {
-                    where: {
-                        value:value
-                    } //设定异步数据接口的额外参数
-                    ,page: {
-                        curr:1
-                    }
-                });
-            }
-
-        };
-        //貌似是激活按钮点击的对应方法
-        $('.demoTable .layui-btn').on('click', function(){
-            var type = $(this).data('type');
-            active[type] ? active[type].call(this) : '';
-        });
-
-    });
-</script>
-
-</body>
-</html>
+修改日志
